<resources>
    <string name="app_name1" translatable="false">fitness app</string>
    <string name="app_name" translatable="false">fitness app</string>
    <string name="ADMOB_Unit_ID" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="AdMob_Full_ID" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="AdMob_Native_ID" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="AdMob_Baner_ID" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="privacy" translatable="false">Privacy Policy</string>
    <string name="image" translatable="false">Image</string>
    <string name="abs_title">Abs workout</string>
    <string name="butocks1">Arm</string>
    <string name="buttocks_title1">Arm workout</string>
    <string name="Fatbrn1">Chest</string>
    <string name="fatburn_title1">Chest workout</string>
    <string name="noti1">Its Time to your Exercise Time..</string>
    <string name="noti2">Female Workout</string>
    <string name="noti3">Hey! its workout time</string>
    <string name="noti4">Lets Start Workout</string>
    <string name="butocks">Buttocks</string>
    <string name="weight">Weight Lose</string>
    <string name="Abs">Abs</string>
    <string name="Fatbrn">Fat Burn</string>
    <string name="workout">Workout</string>
    <string name="save">Save</string>
    <string name="ABDOMINALCRUNCHES">abdominal crunches</string>
    <string name="ABDOMINALCRUNCHESDESCRIPTION">Lie down on your back and bend your knees, Now, lift your head and shoulder, by stretching your hand, Stay for some seconds and then come back to the initial position,</string>
    <string name="BIRDDOGDESCRIPTION">Initially be down on your hands and knees, Now, stretch your right leg and left hand simultaneously, Be in this position for few seconds and come back to the initial position, Repeat it for the other side,</string>
    <string name="BRIDGE">bridge</string>
    <string name="BRIDGEDESCRIPTION">Start by lying on the floor, then raise your hips with your back straight, Be in this position for as long as possible,</string>
    <string name="BIRDDOG">bird dog</string>
    <string name="CALFSTRETCHLEFT">calf stretch left</string>
    <string name="CALFSTRETCHLEFTDESCRIPTION">Stand holding a wall, With your left leg fully stretched and right leg forward, exert force onto the wall with your arms, Be in this pose for some seconds,</string>
    <string name="CALFSTRETCHRIGHT">calf stretch right</string>
    <string name="CALFSTRETCHRIGHTDESCRIPTION">Stand holding a wall, With your right leg fully stretched and left leg forward, exert force onto the wall with your arms, Be in this pose for some seconds,</string>
    <string name="CATCOWPOSE">cat cow pose</string>
    <string name="CATCOWPOSEDESCRIPTION">Initially be down on your hands and knees, Now, inhale by stretching your stomach down and exhale by stretching your back upwards, Repeat it,</string>
    <string name="CHILDPOSE">child pose</string>
    <string name="CHILDPOSEDESCRIPTION">Initially be in table pose, Now exhale and lower your hips towards the heels, Let the forehead touch the ground and arms stretched backwards towards your feet, Be in this position for sometime,</string>
    <string name="COBRASTRETCH">cobra stretch</string>
    <string name="COBRASTRETCHDESCRIPTION">Lie down with your head facing the ground, Keep your hands at the side of your shoulders, Now, raise your chest with your arms, Be in this position for some time,</string>
    <string name="LEFTQUADSTRETCHWITHWALL">left quad stretch with wall</string>
    <string name="LEFTQUADSTRETCHWITHWALLDESCRIPTION">Start in a standing pose, Touch a wall with your right hand and hold the ankle of your left leg on bending it, Be in this position,</string>
    <string name="LYINGBUTTERFLYSTRETCH">lying butterfly stretch</string>
    <string name="LYINGBUTTERFLYSTRETCHDESCRIPTION">Lie down on your back, Bend your knees ,with the soles of the feet, touching each other, Stay in this position,</string>
    <string name="PLIESQUATS">plie squats</string>
    <string name="REVERSECRUNCHES">reverse crunches</string>
    <string name="REVERSECRUNCHESDESCRIPTION">Lie down on your back and bend your knees, Now, bring your knees towards your head, by keeping your hands on the side of your body,</string>
    <string name="RIGHTQUADSTRETCHWITHWALL">right quad stretch with wall</string>
    <string name="RIGHTQUADSTRETCHWITHWALLDESCRIPTION">Start in a standing pose, Touch a wall with your left hand and hold the ankle of your right leg on bending it, Be in this position,</string>
    <string name="SHOULDERSTRETCH">shoulder stretch</string>
    <string name="SHOULDERSTRETCHDESCRIPTION">Stretch your left arm, across your body, Hold the elbow of your left arm, using your right arm and pull it towards your chest, Repeat the exercise on the other side,</string>
    <string name="SQUATS">squats</string>
    <string name="TRICEPSSTRETCHLEFT">triceps stretch left</string>
    <string name="TRICEPSSTRETCHLEFTDESCRIPTION">Lift your left arm, bend it and place it on your back, Hold the left elbow using your right hand and pull it, Be in this position for some seconds,</string>
    <string name="TRICEPSSTRETCHRIGHT">triceps stretch right</string>
    <string name="TRICEPSSTRETCHRIGHTDESCRIPTION">Lift your right arm, bend it and place it on your back, Hold the right elbow using your left hand and pull it, Be in this position for some seconds,</string>
    <string name="fb_banner" translatable="false">1234567891011_1234567891011</string>
    <string name="fb_full" translatable="false">1234567891011_1234567891011</string>
    <string name="fb_nativ" translatable="false">1234567891011_1234567891011</string>
    <string name="advbellyfattip1">High intake of sugar is bad for health,sugary drinks like carbonated drinks,fruit juice etc,are high in sugar which means they are high in calories,avoid sugary drinks if you want to lose weight.</string>
    <string name="advbellyfattip10">Make sure you follow a healthy diet,a healthy diet for weight loss includes fruits, vegetables, healthy fats, protein rich foods and fibrous foods,a healthy diet contains foods which are low in calories and helps in weight loss.</string>
    <string name="advbellyfattip10title">Eat healthy</string>
    <string name="advbellyfattip11">Black coffee contains caffeine which increases your metabolism and makes you energetic,consumption of black coffee helps to burn calories,do not add sugar or any high-calorie sweeteners to your coffee,drinking black coffee regularly results in weight loss.</string>
    <string name="advbellyfattip11title">Consume black coffee</string>
    <string name="advbellyfattip12">Eggs are high in protein and low in calories,eating whole eggs for breakfast makes you full and reduces cravings for more food which helps in weight loss.</string>
    <string name="advbellyfattip12title">Eat whole eggs</string>
    <string name="advbellyfattip13">Drinking water helps in weight loss,drinking sufficient quantity of water boosts metabolism and helps to burn calories in your body,the quantity of water intake per day for adult male is 4 liters and for adult female is 3 liters.</string>
    <string name="advbellyfattip13title">Drink adequate quantity of water</string>
    <string name="advbellyfattip14">Green tea contains caffeine and a flavonoid called catechin,catechin helps to break down excess fat in your body,the Caffeine present in green tea boosts your metabolism and helps to burn calories which results in weight loss.</string>
    <string name="advbellyfattip14title">Drink green tea</string>
    <string name="advbellyfattip15">Eat around 4 to 5 dates as a snack,dates are rich in fiber and low in calories,dates makes you feel full and this reduces cravings for more food which results in weight loss.</string>
    <string name="advbellyfattip15title">Eat dates as a snack</string>
    <string name="advbellyfattip16">Eat fiber rich fruits like Oranges, Strawberries, Banana etc,during brunch,fruits rich in fiber makes you feel full which reduces cravings for more food and this results in weight loss.</string>
    <string name="advbellyfattip16title">Consume fruits during brunch</string>
    <string name="advbellyfattip17">Make sure you eat carbohydrates in their original form,consume less refined carbohydrates like red rice, whole wheat bread, whole wheat pasta and oats,less refined carbohydrates are rich in fiber and makes you feel full which reduces cravings for more food and this helps in weight loss.</string>
    <string name="advbellyfattip17title">Consume carbohydrates in their original form</string>
    <string name="advbellyfattip18">Vegetable salads are low in calories and rich in fiber which helps you to lose weight,prepare vegetable salads using beans, olive oil, lemon juice, vinegar, pepper and leafy greens like lettuce, spinach, kale etc.</string>
    <string name="advbellyfattip18title">Include vegetable salads in your diet</string>
    <string name="advbellyfattip19">High stress levels causes weight gain,feeling stressed results in cravings for junk foods like sweet, pizza, burgers, doughnuts etc,perform activities like yoga to keep your stress under control.</string>
    <string name="advbellyfattip19title">Manage stress to lose weight</string>
    <string name="advbellyfattip1title">Avoid sugary drinks</string>
    <string name="advbellyfattip2">Performing cardio exercises like running, cycling, swimming, jumping rope etc,helps you to burn calories,cardio exercises also reduces belly fat in your body,Belly fat decreases your metabolism and causes weight gain,do cardio exercises regularly to lose weight.</string>
    <string name="advbellyfattip20">Cook food using healthy oils like olive oil, avocado oil and sesame oil,these oils are low in calories unlike other refined oils and helps to lose weight,make sure that you use only a small quantity of these oils while cooking.</string>
    <string name="advbellyfattip20title">Choose healthy oils</string>
    <string name="advbellyfattip21">Processed foods are high in calories and causes weight gain,avoid processed foods like cheese, canned fruit, canned meat, jams, ketchup etc., if you want to lose weight.</string>
    <string name="advbellyfattip21title">Avoid processed foods</string>
    <string name="advbellyfattip22">Any food fried using refined oils are high in calories,make sure you consume steam cooked or grilled foods which are low in calories if you want to lose weight.</string>
    <string name="advbellyfattip22title">Do not eat fried foods</string>
    <string name="advbellyfattip23">Eat snacks which are rich in fiber and proteins,also make sure that the snacks are low in calories,some of the healthy snacks include Greek yogurt, nuts, peanut butter, whole wheat bread, apple slices etc.</string>
    <string name="advbellyfattip23title">Eat healthy snacks</string>
    <string name="advbellyfattip24">Dark chocolate can be used as a snack,dark chocolate contains healthy fats which makes you full for a long time and reduces cravings resulting in weight loss.</string>
    <string name="advbellyfattip24title">Eat dark chocolate</string>
    <string name="evening_title">Evening stretches</string>
    <string name="exercise_time">Exercise Time</string>
    <string name="morning_title">Morning warm up</string>
    <string name="set">Set</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_your_preferable_exercise_time">Set Your preferable exercise time</string>
    <string name="tab1">Training</string>
    <string name="tab2">Routines</string>
    <string name="tab3">Profile</string>
    <string name="tab4">Tips</string>
</resources>