<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/training"
        android:checked="true"
        android:fontFamily="@font/overlock_regular"
        android:icon="@drawable/training"
        android:title="@string/tab1" />
    <item
        android:id="@+id/routine"
        android:checked="false"
        android:fontFamily="@font/overlock_regular"
        android:icon="@drawable/routines"
        android:title="@string/tab2" />
    <item
        android:id="@+id/tips_main"
        android:checked="false"
        android:fontFamily="@font/overlock_regular"
        android:icon="@drawable/tips"
        android:title="@string/tab4" />
    <item
        android:id="@+id/profile"
        android:checked="false"
        android:fontFamily="@font/overlock_regular"
        android:title="@string/tab3" />
</menu>
