<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <RelativeLayout
        android:id="@+id/rtrtrt1"
        android:background="@color/women_color"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20dp"
            android:textAlignment="center"
            android:fontFamily="@font/overlock_bold"
            android:textColor="@color/white"
            android:text="@string/tab2"/>

    </RelativeLayout>



    <RelativeLayout
        android:layout_below="@+id/rtrtrt1"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/morning_banner"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/morning_workout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />


            <TextView
                android:id="@+id/t1"
                android:layout_above="@+id/t11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/baner_text"
                android:text="@string/morning_title"
                android:textColor="@color/black"
                android:textSize="18dp" />





        </RelativeLayout>




        <RelativeLayout
            android:id="@+id/r2"
            android:layout_below="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/evening_banner"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/evening_workout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />


            <TextView
                android:layout_above="@+id/t11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/baner_text"
                android:text="@string/evening_title"
                android:textColor="@color/black"
                android:textSize="18dp" />





        </RelativeLayout>


    </RelativeLayout>



</RelativeLayout>
