<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/dark_color"
        android:visibility="visible">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/exercisetoolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:minHeight="50dp"
            android:theme="@style/myToolbarTheme"
            app:navigationIcon="?attr/homeAsUpIndicator">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/overlock_bold"
                android:text="@string/exercise_time"
                android:layout_marginEnd="65dp"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout

        android:layout_below="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_above="@+id/set"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/overlock_regular"
            android:gravity="center"
            android:padding="2dp"
            android:layout_marginBottom="20dp"
            android:text="@string/set_your_preferable_exercise_time"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TimePicker
            android:id="@+id/datePicker1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:theme="@style/Time_Picker"
            android:layout_gravity="center" />


    </LinearLayout>
    <Button
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/a2_grad"
        android:backgroundTint="@color/dark_color"
        android:fontFamily="@font/overlock_regular"
        android:padding="5dp"
        android:text="@string/set"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>
